--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "codemirror-solidity",
-  "version": "0.2.5",
+  "name": "@bsd/codemirror-solidity",
+  "version": "0.0.1",
   "description": "codemirror solidity mode",
-  "files": ["index.js"],
+  "files": [
+    "index.js"
+  ],
   "main": "index.js",
   "scripts": {
     "build": "browserify browser.js -o solidity.js",
-    "release": "rm -rf package-lock.json && npm version minor && npm publish",
-    "patch": "rm -rf package-lock.json && npm version patch && npm publish"
+    "release": "rm -rf package-lock.json && npm publish --registry 'npm.bsd.education:38091'"
   },
   "keywords": [
     "solidity",
